--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask-Cors==4.0.1
 Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.1.0
 SQLAlchemy==2.0.36
-psycopg[binary]==3.2.3
+psycopg2-binary
 Werkzeug==3.1.3
 itsdangerous==2.2.0
 Jinja2==3.1.4
